# mlir-tutorials

./: .gitignore  README.md
00_the_idea/: README.md
01_the_basics/: README.md
02_mlir_opt/: README.md  fake.mlir
03_lowering/: Makefile  README.md  linalg_on_tensors.mlir
04_creating_an_empty_optimizer/: CMakeLists.txt  Makefile  README.md  play-opt.cpp
tmp/: 13.mlir  CMakeLists.txt  play-opt.cpp
